--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,32 +11,32 @@
     <h1 id="Pname">Generic Webpage Name</h1>
     <div id="LogBox1">
         <div id="DiscriptBox">
-            <p>Welcome to our website, if you are new to our site please make an account.</p>
+            <br><p>Welcome to our website, if you are new to our site please make an account.</p>
             <div id="LogBox2">
                 <br>
-                <input type="text" id="user" name="user" placeholder="Username" required="required"><br><br>
-                <input type="text" id="pass" name="pass" placeholder="Password" required="required"><br>
+                <input type="text" id="user" placeholder="Username" required="required"><br><br>
+                <input type="text" id="pass" placeholder="Password" type="text" required="required"><br>
+                <input type="checkbox" onclick="passVisiblity()">Show Password
                 <br>
-                <p>
-                    <button type="button" class="btn btn-primary btn-lg">Create Account</button>
-                </p>
-                <p>
-                    <button type="button" class="btn btn-primary btn" onclick="ToggleEnter(0)">I have an Account</button>
-                </p>
-            </div>
-            <div id="LogBox3">
-                    <br>
-                    <input type="text" id="user" name="user" placeholder="Username" required="required"><br><br>
-                    <input type="text" id="pass" name="pass" placeholder="Password" required="required"><br>
-                    <br>
+                <div id="LogBox3">
                     <p>
-                        <button type="button" class="btn btn-primary btn-lg">Sign In</button>
-                        <button type="button" class="btn btn-primary btn-lg" onclick="ToggleEnter(1)">></button>
+                        <button type="button" class="btn btn-primary btn-lg">Create Account</button>
+                    </p>
+                    <p>
+                        <button type="button" class="btn btn-primary btn" onclick="toggleEnter(0)">I have an Account</button>
                     </p>
                 </div>
+                <div id="LogBox4">
+                    <p>
+                        <button type="button" class="btn btn-primary btn-lg">Sign In</button>
+                        <button type="button" class="btn btn-primary btn-lg" onclick="toggleEnter(1)">></button>
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
+    <script src="Account.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
