--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,7 +8,7 @@
     <link href="home.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1 id="Pname">Generic Webpage Name</h1>
+    <h1 id="Pname">Simple Life</h1>
     <div id="LogBox1">
         <div id="DiscriptBox">
             <div id="LogBox2">
