--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,7 +16,7 @@
                     <br><p>Welcome to our website, if you are new to our site please make an account.</p>
                     <br>
                     <input type="text" id="user" placeholder="Username" required="required"><br><br>
-                    <input type="text" id="pass" placeholder="Password" type="text" required="required"><br>
+                    <input type="password" id="pass" placeholder="Password" required="required"><br>
                     <input type="checkbox" onclick="passVisiblity()">Show Password
                     <br>
                     <div id="LogBox3">
