WIP js to php communication

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div id="LogBox4">
                         <p>
-                            <button type="button" class="btn btn-primary btn-lg">Sign In</button>
+                            <button type="button" class="btn btn-primary btn-lg" onclick="doLogin(0)">Sign In</button>
                             <button type="button" class="btn btn-primary btn-lg" onclick="toggleEnter(1)">></button>
                         </p>
                     </div>
@@ -42,7 +42,7 @@
                     <input type="text" id="phone" placeholder="Phone number" required="required"><br><br>
                     <input type="text" id="email" placeholder="Email Address" required="required"><br><br>
                     <p>
-                        <button type="button" class="btn btn-primary btn-lg">Create Account</button>
+                        <button type="button" class="btn btn-primary btn-lg" onclick="doLogin(1)">Create Account</button>
                         <button type="button" class="btn btn-primary btn-lg" onclick="logOption(1)">></button>
                     </p>
                 </div>
