Hid additional info window

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,7 +21,7 @@
                     <br>
                     <div id="LogBox3">
                         <p>
-                            <button type="button" class="btn btn-primary btn-lg" onclick="logOption(0)">Create Account</button>
+                            <button type="button" class="btn btn-primary btn-lg">Create Account</button>
                         </p>
                         <p>
                             <button type="button" class="btn btn-primary btn" onclick="toggleEnter(0)">I have an Account</button>
@@ -34,6 +34,7 @@
                         </p>
                     </div>
                 </div>
+                <!--In case additional info is needed for new accounts, logOption()-->
                 <div id="LogOption2">
                     <br><p>To complete your new account, please provide the following information.</p>
                     <br>
