Updated communications with .php files

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,7 +21,7 @@
                     <br>
                     <div id="LogBox3">
                         <p>
-                            <button type="button" class="btn btn-primary btn-lg">Create Account</button>
+                            <button type="button" class="btn btn-primary btn-lg" onclick="doLogin(1)">Create Account</button>
                         </p>
                         <p>
                             <button type="button" class="btn btn-primary btn" onclick="toggleEnter(0)">I have an Account</button>
@@ -47,6 +47,7 @@
                         <button type="button" class="btn btn-primary btn-lg" onclick="logOption(1)">></button>
                     </p>
                 </div>
+                <p id="LogError"></p>
             </div>
         </div>
     </div>
