--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
+    <!-- Javascript -->
+    <script src="contacts.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <title>Contacts | Contact Manager</title>
   </head>
   <body>
@@ -23,17 +27,17 @@
           <div class="col-auto my-1">
             <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
             <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-              <option selected>Filter by...</option>
-              <option value="1">First Name</option>
-              <option value="2">Last Name</option>
-              <option value="3">Phone</option>
-              <option value="4">Email</option>
+              <option selected value ="emptyOption">Filter by...</option>
+              <option value="0">First Name</option>
+              <option value="1">Last Name</option>
+              <option value="2">Phone</option>
+              <option value="3">Email</option>
               
             </select>
           </div>
 
           <div class="col-auto my-1">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" onclick="sortTable()">Submit</button>
           </div>
         </div>
       </form>
@@ -42,7 +46,7 @@
       <pre></pre>
 
       
-      <table class="table table-striped">
+      <table class="table table-striped" id="contactsTable">
           <thead class="thead-dark">
             <tr>
               <th scope="col">#</th>
@@ -50,6 +54,8 @@
               <th scope="col">Last</th>
               <th scope="col">Phone</th>
               <th scope="col">Email</th>
+              <th scope="col">Edit</th>
+              <th scope="col">Delete</th>
             </tr>
           </thead>
           <tbody>
@@ -59,6 +65,8 @@
               <td>Fleming</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">2</th>
@@ -66,6 +74,8 @@
               <td>Pearl</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">3</th>
@@ -73,6 +83,8 @@
               <td>Altamura</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">4</th>
@@ -80,6 +92,8 @@
               <td>Neidig</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">5</th>
@@ -87,6 +101,8 @@
               <td>Neidig</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">6</th>
@@ -94,6 +110,8 @@
               <td>Bowyer</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">7</th>
@@ -101,6 +119,8 @@
               <td>Membribe</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>                          
             <tr>
               <th scope="row">8</th>
@@ -108,6 +128,8 @@
               <td>Martisovitsova</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">9</th>
@@ -115,6 +137,8 @@
               <td>Hyatt</td>
               <td>1234567</td>
               <td>@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
           </tbody>
         </table>
