Still working on it

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,7 +21,7 @@
                     <br>
                     <div id="LogBox3">
                         <p>
-                            <button type="button" class="btn btn-primary btn-lg" onclick="logOption(0)">Create Account</button>
+                            <button type="button" class="btn btn-primary btn-lg" onclick="doLogin(1)">Create Account</button>
                         </p>
                         <p>
                             <button type="button" class="btn btn-primary btn" onclick="toggleEnter(0)">I have an Account</button>
@@ -40,8 +40,8 @@
                     <br>
                     <input type="text" id="fname" placeholder="First Name" required="required"><br><br>
                     <input type="text" id="lname" placeholder="Last Name" required="required"><br><br>
-                    <input type="text" id="phone" placeholder="Phone number" required="required"><br><br>
                     <input type="text" id="email" placeholder="Email Address" required="required"><br><br>
+                    <input type="text" id="addr" placeholder="Address" required="required"><br><br>
                     <p>
                         <button type="button" class="btn btn-primary btn-lg" onclick="doLogin(1)">Create Account</button>
                         <button type="button" class="btn btn-primary btn-lg" onclick="logOption(1)">></button>
