Added edit button functionality. Client side only though.

--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -37,7 +37,7 @@
           </div>
 
           <div class="col-auto my-1">
-            <button type="submit" class="btn btn-primary" onclick="sortTable()">Submit</button>
+            <button type="submit" class="btn btn-primary" onclick="sortTable(); return false;">Submit</button>
           </div>
         </div>
       </form>
@@ -64,16 +64,16 @@
               <td>Chris</td>
               <td>Fleming</td>
               <td>1234567</td>
-              <td>@knights.ucf.edu</td>
-              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
-              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
+              <td>z@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary edit" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary delete" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jordan</td>
               <td>Pearl</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>3</td>
+              <td>2@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -81,8 +81,8 @@
               <th scope="row">3</th>
               <td>Maurizio</td>
               <td>Altamura</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>09999</td>
+              <td>ba@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -90,8 +90,8 @@
               <th scope="row">4</th>
               <td>Matt</td>
               <td>Neidig</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>0</td>
+              <td>lol@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -99,8 +99,8 @@
               <th scope="row">5</th>
               <td>Zack</td>
               <td>Neidig</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>143</td>
+              <td>someday@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -108,8 +108,8 @@
               <th scope="row">6</th>
               <td>Jade</td>
               <td>Bowyer</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>3242</td>
+              <td>what@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -117,8 +117,8 @@
               <th scope="row">7</th>
               <td>Joel</td>
               <td>Membribe</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>22</td>
+              <td>uh@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>                          
@@ -126,8 +126,8 @@
               <th scope="row">8</th>
               <td>Lucia</td>
               <td>Martisovitsova</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>0</td>
+              <td>cracker@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -135,8 +135,8 @@
               <th scope="row">9</th>
               <td>Sam</td>
               <td>Hyatt</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>123</td>
+              <td>peanut@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
