--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -37,7 +37,7 @@
           </div>
 
           <div class="col-auto my-1">
-            <button type="submit" class="btn btn-primary" onclick="sortTable(); return false;">Submit</button>
+            <button type="submit" class="btn btn-primary" onclick="searchContacts()">Submit</button>
           </div>
         </div>
       </form>
