--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -38,6 +38,7 @@
 
           <div class="col-auto my-1">
             <button type="submit" class="btn btn-primary" onclick="searchContacts()">Submit</button>
+            <p id="LogError"></p>
           </div>
         </div>
       </form>
