--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -38,7 +38,15 @@
 
           <div class="col-auto my-1">
             <button type="submit" class="btn btn-primary" onclick="searchContacts()">Submit</button>
+          </div>
+          <div class="col-auto my-1">
             <p id="LogError"></p>
+          </div>
+          <div class="col-auto my-1">
+            <span id="contactSearchResult"></span>
+          </div>
+          <div class="col-auto my-1">
+            <select id="contactList" style="display:none; visibility:hidden;">
           </div>
         </div>
       </form>
