--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -48,6 +48,9 @@
           <div class="col-auto my-1">
             <select id="contactList" style="display:none; visibility:hidden;">
           </div>
+          <div class="col-auto my-1">
+            <button type="button" class="btn btn-primary btn" onclick="doLogout()">Logout</button>
+          </div>
         </div>
       </form>
 
