--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -22,7 +22,7 @@
       <form>
         <div class="form-row align-items-center">
             <div class="col-auto my-1">
-                <label class="sr-only" for="inlineFormInputName">Search</label>
+                <label class="sr-only" id="searchButton" for="inlineFormInputName">Search</label>
                 <input type="text" class="form-control" id="inlineFormInputName" placeholder="Search">
               </div>
           <div class="col-auto my-1">
