--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -44,8 +44,9 @@
             <p id="LogError"></p>
           </div>
           <div class="col-auto my-1">
-            <span id="contactSearchResult"></span>
+            <span id="contactSearchResult1"></span>
           </div>
+          <p id="contactSearchResult"></p>
           <div class="col-auto my-1">
             <button type="button" class="btn btn-primary btn" onclick="doLogout()">Logout</button>
           </div>
