--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -8,11 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <!-- Javascript -->
-    <script src="Account.js"></script>
-    <script src="contacts.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
     <title>Contacts | Contact Manager</title>
   </head>
   <body>
@@ -49,6 +44,9 @@
           <p id="contactSearchResult"></p>
           <div class="col-auto my-1">
             <button type="button" class="btn btn-primary btn" onclick="doLogout()">Logout</button>
+          </div>
+          <div>
+            <button type="button" class="btn btn-primary btn">Add Contact</button>
           </div>
           <div class="col-auto my-1">
             <select id="contactList" style="display:none; visibility:hidden">
@@ -157,6 +155,10 @@
           </tbody>
         </table>
       <!-- Optional JavaScript -->
+      <!-- Javascript -->
+      <script src="Account.js"></script>
+      <script src="contacts.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
