Auto-load contacts in contacts.html

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,6 +8,7 @@
     <link href="home.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <body onload="searchContacts()"></body>
     <h1 id="Pname">Simple Life</h1>
     <div id="LogBox1">
         <div id="DiscriptBox">
