commit to right file

--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -11,6 +11,7 @@
     <title>Contacts | Contact Manager</title>
   </head>
   <body>
+    <body onload="searchContacts()"></body>
     <div class="container">  
       <h2>Contacts List</h2>
 
