--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -45,7 +45,23 @@
 
       <pre></pre>
 
-      
+      <div class="col-auto my-1">
+        <table id="contactList" style="display:none; visibility:hidden" class="table table-striped">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First</th>
+              <th scope="col">Last</th>
+              <th scope="col">Phone</th>
+              <th scope="col">Email</th>
+              <th scope="col">Edit</th>
+              <th scope="col">Delete</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+
+      <!--
       <table class="table table-striped" id="contactsTable">
           <thead class="thead-dark">
             <tr>
@@ -64,16 +80,16 @@
               <td>Chris</td>
               <td>Fleming</td>
               <td>1234567</td>
-              <td>@knights.ucf.edu</td>
-              <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
-              <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
+              <td>z@knights.ucf.edu</td>
+              <td><button type="edit" class="btn btn-primary edit" onclick="editThis(this)">Edit</button>
+              <td><button type="delete" class="btn btn-primary delete" onclick="deleteThis(this)">Delete</button>
             </tr>
             <tr>
               <th scope="row">2</th>
               <td>Jordan</td>
               <td>Pearl</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>3</td>
+              <td>2@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -81,8 +97,8 @@
               <th scope="row">3</th>
               <td>Maurizio</td>
               <td>Altamura</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>09999</td>
+              <td>ba@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -90,8 +106,8 @@
               <th scope="row">4</th>
               <td>Matt</td>
               <td>Neidig</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>0</td>
+              <td>lol@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -99,8 +115,8 @@
               <th scope="row">5</th>
               <td>Zack</td>
               <td>Neidig</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>143</td>
+              <td>someday@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -108,8 +124,8 @@
               <th scope="row">6</th>
               <td>Jade</td>
               <td>Bowyer</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>3242</td>
+              <td>what@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -117,8 +133,8 @@
               <th scope="row">7</th>
               <td>Joel</td>
               <td>Membribe</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>22</td>
+              <td>uh@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>                          
@@ -126,8 +142,8 @@
               <th scope="row">8</th>
               <td>Lucia</td>
               <td>Martisovitsova</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>0</td>
+              <td>cracker@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
@@ -135,14 +151,19 @@
               <th scope="row">9</th>
               <td>Sam</td>
               <td>Hyatt</td>
-              <td>1234567</td>
-              <td>@knights.ucf.edu</td>
+              <td>123</td>
+              <td>peanut@knights.ucf.edu</td>
               <td><button type="edit" class="btn btn-primary" onclick="editThis(this)">Edit</button>
               <td><button type="delete" class="btn btn-primary" onclick="deleteThis(this)">Delete</button>
             </tr>
           </tbody>
         </table>
+      -->
       <!-- Optional JavaScript -->
+      <!-- Javascript -->
+      <script src="Account.js"></script>
+      <script src="contacts.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
