--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -79,9 +79,8 @@
 
 
       <pre></pre>
-
       <div class="col-auto my-1">
-        <table id="contactList" style="display:none; visibility:hidden" class="table table-striped">
+        <table class="table table-striped">
           <thead class="thead-dark">
             <tr>
               <th scope="col">#</th>
@@ -93,6 +92,10 @@
               <th scope="col">Delete</th>
             </tr>
           </thead>
+        </table>
+      </div>
+      <div class="col-auto my-1">
+        <table id="contactList" style="display:none; visibility:hidden" class="table table-striped">
         </table>
       </div>
 
