--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -83,8 +83,8 @@
         <table class="table table-striped">
           <thead class="thead-dark">
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">    First</th>
+              <th scope="col">#&nbsp;&nbsp;&nbsp;&nbsp;</th>
+              <th scope="col">First</th>
               <th scope="col">Last</th>
               <th scope="col">Phone</th>
               <th scope="col">Email</th>
