More Contact options

--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -87,8 +87,8 @@
               <th scope="col">First</th>
               <th scope="col">Last</th>
               <th scope="col">Phone</th>
-              <th scope="col">Email</th>
-              <th scope="col">Edit</th>
+              <th scope="col">Email&nbsp;&nbsp;&nbsp;&nbsp;</th>
+              <th scope="col">Edit&nbsp;&nbsp;&nbsp;&nbsp;</th>
               <th scope="col">Delete</th>
             </tr>
           </thead>
