--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -108,12 +108,12 @@
         <table class="table table-striped">
           <thead class="thead-dark">
             <tr>
-              <th scope="col">#&nbsp;&nbsp;&nbsp;&nbsp;</th>
+              <th scope="col">#</th>
               <th scope="col">First</th>
               <th scope="col">Last</th>
               <th scope="col">Phone</th>
-              <th scope="col">Email&nbsp;&nbsp;&nbsp;&nbsp;</th>
-              <th scope="col">Edit&nbsp;&nbsp;&nbsp;&nbsp;</th>
+              <th scope="col">Email</th>
+              <th scope="col">Edit</th>
               <th scope="col">Delete</th>
             </tr>
           </thead>
