--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -120,7 +120,7 @@
         </table>
       </div>
       <div class="col-auto my-1">
-        <table id="contactList" style="display:none; visibility:hidden" class="table table-striped">
+        <table id="contactList" style="visibility:hidden" class="table table-striped">
         </table>
       </div>
 
