--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -80,10 +80,10 @@
                     
                     <!-- Modal body -->
                     <div class="modal-body">
-                      <input type="text" id="fname" placeholder="First Name" required="required">
-                      <input type="text" id="lname" placeholder="Last Name" required="required"><br><br>
-                      <input type="text" id="phone" placeholder="Phone number" required="required">
-                      <input type="text" id="addr" placeholder="Address" required="required"><br><br>
+                      <input type="text" id="fname2" placeholder="First Name" required="required">
+                      <input type="text" id="lname2" placeholder="Last Name" required="required"><br><br>
+                      <input type="text" id="phone2" placeholder="Phone number" required="required">
+                      <input type="text" id="addr2" placeholder="Address" required="required"><br><br>
                     </div>
                     
                     <!-- Modal footer -->
