--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -121,7 +121,7 @@
         </table>
       </div>
       <div class="col-auto my-1">
-        <table id="contactList" style="visibility:hidden" class="table table-striped">
+        <table id="contactList" style="visibility:hidden" style="width:100%" class="table table-striped">
         </table>
       </div>
 
