--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -106,7 +106,6 @@
       <pre></pre>
       <div class="col-auto my-1">
         <table class="table table-striped">
-          <table style="width:100%">
           <thead class="thead-dark">
             <tr>
               <th scope="col">#</th>
@@ -121,7 +120,7 @@
         </table>
       </div>
       <div class="col-auto my-1">
-        <table id="contactList" style="visibility:hidden" style="width:100%" class="table table-striped">
+        <table id="contactList" style="visibility:hidden" class="table table-striped">
         </table>
       </div>
 
