--- a/FrontEnd/contacts.html
+++ b/FrontEnd/contacts.html
@@ -21,6 +21,7 @@
                 <label class="sr-only" id="searchButton" for="inlineFormInputName">Search</label>
                 <input type="text" class="form-control" id="inlineFormInputName" placeholder="Search">
               </div>
+          <!--
           <div class="col-auto my-1">
             <label class="mr-sm-2 sr-only" for="inlineFormCustomSelect">Preference</label>
             <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
@@ -32,6 +33,7 @@
               
             </select>
           </div>
+          -->
 
           <div class="col-auto my-1">
             <button type="submit" class="btn btn-primary" onclick="searchContacts()">Submit</button>
@@ -112,7 +114,7 @@
               <th scope="col">First</th>
               <th scope="col">Last</th>
               <th scope="col">Phone</th>
-              <th scope="col">Email</th>
+              <th scope="col">Address</th>
               <th scope="col">Edit</th>
               <th scope="col">Delete</th>
             </tr>
